2009-01-28  Scott James Remnant  <scott@netsplit.com>

	* init/environ.c (environ_add): We can't allocate nih_local with
	a context, it won't be freed; so don't, but then remember to
	reference it when we do just use it.

	* init/event.c (event_pending_handle_jobs): Must reset the start_on
	operator in case of error.

	* init/job_process.c (job_process_kill_timer): Oops, move the
	assert that we have a process pid to after we know which process
	we have.
	* init/tests/test_job_process.c (test_run): Initialise the
	error context and NihIo outside of TEST_ALLOC_FAIL
	(test_kill): Initialise timers and the event system.
	* init/init.supp: Reference from the jobs hash to the bins is
	still reachable, obviously; as is the string inside job_name()
	either way it is allocated

	* init/tests/test_parse_job.c (test_parse_job): Initialise the
	error context outside of TEST_ALLOC_FAIL

	* init/init.supp: Update suppressions for new nih_alloc()

	* init/job_process.c (job_process_run): Had the shell variable
	setting round the wrong way, now it should be ok.

	* init/tests/test_blocked.c (test_new): in the case of allocation
	failure, the message should not be referenced; which we test by
	trying to discard it and seeing whether that works.

	* init/job.c (job_emit_event): event_new() only references the
	environment now, so use nih_local to make sure we clean it up
	if that doesn't happen

	* init/job.h (Job): Add kill_process member
	* init/job.c (job_new): Initialise to -1
	* init/job_process.c (job_process_kill): Store the process to be
	killed in the kill_process member for the timer, since we can't
	pass two sets of data.  Assert that it's not set to anything, this
	all needs fixing, obviously.
	(job_process_kill_timer): Take the job as the data argument,
	eliminating the need for nih_alloc_parent().  Sanity check the job
	and reset kill_timer and kill_process when done.
	(job_process_terminated): Clear the kill_process field too.